WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
44270
Crash in NP_Initialize when loading QuickTime when running plugins/embed-attributes-setting.html in WebKit2 on Windows
https://bugs.webkit.org/show_bug.cgi?id=44270
Summary
Crash in NP_Initialize when loading QuickTime when running plugins/embed-attr...
Adam Roben (:aroben)
Reported
2010-08-19 09:18:18 PDT
Crash in NP_Initialize when loading QuickTime when running plugins/embed-attributes-setting.html in WebKit2 on Windows
Attachments
Patch
(5.13 KB, patch)
2010-08-19 09:19 PDT
,
Adam Roben (:aroben)
no flags
Details
Formatted Diff
Diff
Patch
(5.13 KB, patch)
2010-08-25 10:29 PDT
,
Adam Roben (:aroben)
sullivan
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Adam Roben (:aroben)
Comment 1
2010-08-19 09:19:01 PDT
Created
attachment 64862
[details]
Patch
WebKit Review Bot
Comment 2
2010-08-19 09:21:11 PDT
Attachment 64862
[details]
did not pass style-queue: Failed to run "['WebKitTools/Scripts/check-webkit-style']" exit_code: 1 WebKitTools/DumpRenderTree/TestNetscapePlugIn/main.cpp:37: Missing space before ( in while( [whitespace/parens] [5] Total errors found: 1 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
Adam Roben (:aroben)
Comment 3
2010-08-19 11:06:21 PDT
<
rdar://problem/8330393
>
Adam Roben (:aroben)
Comment 4
2010-08-19 14:26:48 PDT
Committed
r65703
: <
http://trac.webkit.org/changeset/65703
>
WebKit Review Bot
Comment 5
2010-08-19 16:44:07 PDT
http://trac.webkit.org/changeset/65703
might have broken SnowLeopard Intel Release (Tests) The following changes are on the blame list:
http://trac.webkit.org/changeset/65699
http://trac.webkit.org/changeset/65700
http://trac.webkit.org/changeset/65701
http://trac.webkit.org/changeset/65702
http://trac.webkit.org/changeset/65703
http://trac.webkit.org/changeset/65704
http://trac.webkit.org/changeset/65705
http://trac.webkit.org/changeset/65706
http://trac.webkit.org/changeset/65707
http://trac.webkit.org/changeset/65708
http://trac.webkit.org/changeset/65709
http://trac.webkit.org/changeset/65710
http://trac.webkit.org/changeset/65711
http://trac.webkit.org/changeset/65712
http://trac.webkit.org/changeset/65713
Eric Seidel (no email)
Comment 6
2010-08-23 15:48:29 PDT
Ha! The sherriff even knew this change was at fault! The buildbots were just so upset at the time it was hard to tell. :(
Adam Roben (:aroben)
Comment 7
2010-08-25 10:29:57 PDT
Created
attachment 65434
[details]
Patch
WebKit Review Bot
Comment 8
2010-08-25 10:30:50 PDT
Attachment 65434
[details]
did not pass style-queue: Failed to run "['WebKitTools/Scripts/check-webkit-style']" exit_code: 1 WebKitTools/DumpRenderTree/TestNetscapePlugIn/main.cpp:37: Missing space before ( in while( [whitespace/parens] [5] Total errors found: 1 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
Adam Roben (:aroben)
Comment 9
2010-08-25 10:31:25 PDT
This new patch differs from the old one by recording when NP_Initialize is called and moving the Mac assertion into NP_GetEntryPoints. This allows NP_Initialize/NP_GetEntryPoints to be called multiple times (in the correct order) without the assertion firing.
Adam Roben (:aroben)
Comment 10
2010-08-25 11:14:07 PDT
Committed
r66025
: <
http://trac.webkit.org/changeset/66025
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug