Call NP_GetEntryPoints before NP_Initialize on Windows

Doing otherwise will cause Flash and QuickTime to crash inside
NP_Initialize.

Fixes <http://webkit.org/b/44270> <rdar://problem/8330393> Crash in
NP_Initialize when loading QuickTime when running
plugins/embed-attributes-setting.html in WebKit2 on Windows

Reviewed by Sam Weinig.

WebKit2:

* WebProcess/Plugins/Netscape/NetscapePluginModule.cpp:
(WebKit::NetscapePluginModule::tryLoad): On Windows, first call
NP_GetEntryPoints, then NP_Initialize. Do the reverse on Mac to
prevent Silverlight (e.g.) from crashing (see r38858).

WebKitTools:

Test that NP_Initialize and NP_GetEntryPoints are called in the
correct order

The order differs between Mac and Windows (see r38858).

* DumpRenderTree/TestNetscapePlugIn/main.cpp: Added a CRASH macro and
a boolean to record whether NP_GetEntryPoints has been called.
(NP_Initialize): Crash on Windows if NP_GetEntryPoints hasn't been
called yet. This matches Flash and QuickTime's behavior. Crash on Mac
if NP_GetEntryPoints has been called already. This matches
Silverlight's behavior.

git-svn-id: svn://svn.chromium.org/blink/trunk@65703 bbb929c8-8fbe-4397-9dbb-9b2b20218538