third_party/WebKit/WebKitTools/DumpRenderTree/TestNetscapePlugIn/main.cpp
@@ -32,6 +32,13 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 using namespace std;
 
+#define CRASH() do { \
+    *(int *)(uintptr_t)0xbbadbeef = 0; \
+    ((void(*)())0)(); /* More reliable, but doesn't say BBADBEEF */ \
+} while(false)
+
+static bool getEntryPointsWasCalled;
+
 #if XP_WIN
 #define STDCALL __stdcall
 
@@ -48,6 +55,16 @@ static inline int strcasecmp(const char* s1, const char* s2)
 extern "C"
 NPError STDCALL NP_Initialize(NPNetscapeFuncs *browserFuncs)
 {
+#if XP_WIN
+    // Simulate Flash and QuickTime's behavior of crashing when NP_Initialize is called before NP_GetEntryPoints.
+    if (!getEntryPointsWasCalled)
+        CRASH();
+#elif XP_MACOSX
+    // Simulate Silverlight's behavior of crashing when NP_GetEntryPoints is called before NP_Initialize.
+    if (getEntryPointsWasCalled)
+        CRASH();
+#endif
+
     browser = browserFuncs;
     return NPERR_NO_ERROR;
 }
@@ -55,6 +72,8 @@ NPError STDCALL NP_Initialize(NPNetscapeFuncs *browserFuncs)
 extern "C"
 NPError STDCALL NP_GetEntryPoints(NPPluginFuncs *pluginFuncs)
 {
+    getEntryPointsWasCalled = true;
+
     pluginFuncs->version = (NP_VERSION_MAJOR << 8) | NP_VERSION_MINOR;
     pluginFuncs->size = sizeof(pluginFuncs);
     pluginFuncs->newp = NPP_New;
